Changed some box shadows but still have issue with scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   margin: 50px auto;
   border: 1px solid var(--white-color);
   border-radius: 4px;
-  box-shadow: 0px 6px 12px rgba(0,0,0,0.02);
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.02), 0px 8px 12px rgba(0,0,0,0.03);
   grid-template-columns: 1fr 3fr;
   grid-template-rows: auto 100px;
   grid-template-areas:
@@ -108,6 +108,7 @@
   font-size: 1.2em;
   background: var(--white-color);
   color: var(--primary-font-color);
+  box-shadow: 0px -3px 6px rgba(0,0,0,0.026), 0px -4px 8px rgba(0,0,0,0.043);
 }
 .sendMessageForm input::placeholder{
   color: var(--primary-font-color);
@@ -121,7 +122,7 @@
   background-color: var(--main-color);
   height: 100%;
   z-index: 200;
-  box-shadow: 6px 0px 12px rgba(0,0,0,0.055);
+  box-shadow: 3px 0px 6px rgba(0,0,0,0.026), 4px 0px 8px rgba(0,0,0,0.043);
 }
 .room-title {
   color: var(--white-color);
@@ -270,7 +271,7 @@
   }
 
   .sendMessageForm input {
-    box-shadow: 0px -6px 12px rgba(0,0,0,0.55);
+    /* 0 -3px 6px rgba(0, 0, 0, 0.16), 0 -3px 6px rgba(0, 0, 0, 0.23); */
     /* TODO: For some reason the box shadow is disappearing when the scroll bar is activated. */
   }
 
